recursion.lessons.recursion.tree.Tree.scala.error
Tree:16: error: too many arguments for method branche: ()Unit
branche(length*shrink);
       ^